src/objects/Opportunity_Information__c.object
<CustomObject>
    <description>According to the main authorisation principles, access to opportunity is set to private. Only the owner and the team members will have access to the opportunities.
To enable transparency, collaboration and cross selling options, this object contains public information of the opportunity.
The Object is set to public read only and gets all fields updated from the belonging opportunity. 
The relationship between opportunity and opportunity information is 1:1</description>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Industry usage&quot;. 
Picklist containing the Industry Usage level1 Values From Opportunity</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 1 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level2 Values From Opportunity</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 2 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level3 Values From Opportunity</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_End_User_m__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: Account_End_User__c</description>
        <label>Account End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Information (Account)</relationshipLabel>
        <relationshipName>Opportunity_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Field from Opportunity: Account Name</description>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to ensure a relation to the correct Account</description>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Quotes_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created as part of R5-2504</description>
        <label>All Quotes Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Main Opportunity</description>
        <label>Alternative Opportunity To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Alternative_Opportunity_To__r.Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Account_End_User__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Information (Alternative Opportunity To)</relationshipLabel>
        <relationshipName>Opportunity_Information2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Opportunity field Application__c</description>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.301 Automatic Gate, Beam, Barrier or Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302 Cable Car - Ski Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303 Calander Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304 Centrifuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305 Coating Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306 Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307 Conveyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308 Crusher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309 Cutting, Shear, Saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310 Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311 Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313 Elevator or Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314 Extruder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315 Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316 Flat Rolling Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317 Grinding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318 Household Machinery or Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319 Hydro Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320 Induction Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321 Kiln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322 Machine Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323 Mixer, Stirrer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324 Packaging Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325 Paper Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326 Partner/Distributor Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327 Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328 Processing Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329 Profile Rolling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330 Propulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331 Pump</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Application&quot;. 
Picklist containing active Applications relating to specific Product Groups</description>
        <inlineHelpText>ABB classification of application based on the main process activity of the delivered product, service, solution. The selectable options are product group specific</inlineHelpText>
        <label>Description BU</label>
        <picklist>
            <picklistValues>
                <fullName>DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All other BU&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Indicator__c</fullName>
        <formula>IF(Or(Opportunity_Name_m__r.End_User_Project__c = NULL,Opportunity_Name_m__r.Technical_Amount_USD__c &lt;= 5000000,Opportunity_Name_m__r.Target__c = FALSE), IMAGE(&quot;/resource/CaptureTeamNotRequired&quot;,&quot;&quot;,25,75), IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 5000000, Opportunity_Name_m__r.Technical_Amount_USD__c &lt;=15000000, Opportunity_Name_m__r.Target__c = TRUE ,Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam5MCreated&quot;,&quot;&quot;,25,75),IF(AND(Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 5000000, Opportunity_Name_m__r.Technical_Amount_USD__c &lt;=15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c = 0), IMAGE(&quot;/resource/CaptureTeam5MOpen&quot;,&quot;&quot;,25,75),IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam15MCreated&quot;,&quot;&quot;,25,75),IF(AND( Opportunity_Name_m__r.Technical_Amount_USD__c &gt; 15000000, Opportunity_Name_m__r.Target__c = TRUE , Opportunity_Name_m__r.End_User_Project__r.Capture_Team_Count__c = 0), 
IMAGE(&quot;/resource/CaptureTeam15MOpen&quot;,&quot;&quot;,25,75),&apos;&apos;))) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Team Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R5-2507. To associate the opportunity directly to the Capture Team.</description>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot; 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel classification of the Opportunity information</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1. 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel Classification for Level 2 of Opportunity Information is Optional</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_m__c</fullName>
        <description>Field from Opportunity : Channel_Class</description>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Sales to End Customer / End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Distributor / Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering, Procurement and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal ABB Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Builder and Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consortium__c</fullName>
        <description>R5</description>
        <label>Consortium</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Site_Country_m__c</fullName>
        <description>Field from Opportunity: End_User_Project_Site_Country</description>
        <label>End User Project Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Opportunity: End_User_Project</description>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Opportunity Information</relationshipLabel>
        <relationshipName>Opportunity_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Winner_s_Price__c</fullName>
        <description>Contract price of the competitor</description>
        <label>Estimated Winner&apos;s Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>Field from Opportunity: Industry_Usage</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>When opportunity is created from lead,lead number is captured in Opportunity Information too-CR 299</description>
        <label>Lead-Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>